--- a/src/pages/Home/components/Header/styles.module.scss
+++ b/src/pages/Home/components/Header/styles.module.scss
@@ -11,5 +11,9 @@
     left: 0;
     top: 50%;
     transform: translateY(-50%);
+
+    @media screen and (max-width: 1024px) {
+      display: none;
+    }
   }
 }
