--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -3,6 +3,10 @@
   top: 50%;
   left: 50%;
   z-index: 1;
+
+  @media screen and (max-width: 1024px) {
+    display: none;
+  }
 }
 
 .container {
@@ -22,11 +26,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
+
     width: 100%;
     height: 100%;
 
-    padding-right: --page-padding-right-mini;
     height: 100%;
     z-index: 10;
   }
@@ -35,23 +38,74 @@
     width: 100%;
     transform: translate(-50%, -50%);
     @extend .absoluteBorder;
-    
-    @media screen and (max-width: 1024px) {
-      border-top: 1px solid var(--border-color-mobile);
-    }
   }
-  
+
   .borderY {
     width: 100vh;
     transform: translate(-50%, -50%) rotate(90deg);
     @extend .absoluteBorder;
-    
-    @media screen and (max-width: 1024px) {
-      display: none;
-    }
   }
 
   @media screen and (max-width: 1024px) {
     border: none;
+  }
+}
+
+.controlContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 56px;
+
+  .control {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    padding: var(--page-padding-x-mini);
+
+    .actions {
+      display: flex;
+      gap: 20px;
+
+      button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: 1px solid var(--border-active);
+        background-color: var(--background);
+
+        svg {
+          fill: var(--font-color);
+        }
+
+        @media screen and (max-width: 1024px) {
+          width: 25px;
+          height: 25px;
+
+          svg {
+            width: 16px;
+          }
+        }
+      }
+
+      @media screen and (max-width: 1024px) {
+        gap: 8px;
+      }
+    }
+
+    @media screen and (max-width: 1024px) {
+      gap: 6px;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    flex-direction: column-reverse;
+
+    border-top: 1px solid var(--border-color-transparent);
+    padding-top: 20px;
   }
 }
