--- a/src/shared/components/Text/styles.module.scss
+++ b/src/shared/components/Text/styles.module.scss
@@ -1,6 +1,7 @@
 .h1,
 .b,
-.p {
+.p,
+.span {
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 }
@@ -10,7 +11,7 @@
   font-weight: 700;
   font-size: var(--font-h1);
   line-height: var(--font-h1-height);
-  
+
   color: var(--font-color);
 }
 
@@ -19,7 +20,7 @@
   font-weight: 400;
   font-size: var(--font-b);
   line-height: var(--font-b-height);
-  
+
   color: var(--font-color-accent);
 }
 
@@ -28,6 +29,15 @@
   font-weight: 400;
   font-size: var(--font-p);
   line-height: var(--font-p-height);
+
+  color: var(--font-color);
+}
+
+.span {
+  font-family: 'PT Sans', serif;
+  font-size: 14px;
+  font-size: var(--font-span);
+  line-height: var(--font-span-height);
 
   color: var(--font-color);
 }
